export name update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.1",
-  "name": "instabookembed",
+  "name": "ibembed",
   "description": "Instabook Embed JavaScript SDK",
   "author": "Univ",
   "license": "MIT",
